--- a/.github/workflows/ghactions.yml
+++ b/.github/workflows/ghactions.yml
@@ -1,7 +1,8 @@
 
-name: Github Actions for TriBITS
+name: Draft Action for TriBITS
 
-# Controls when the action will run. Triggers the workflow on push or pull request
+# Controls when the action will run. 
+# Triggers the workflow on push or pull request
 # for the master and develop branch 
 on:
   push:
@@ -27,20 +28,33 @@ jobs:
     #   with:
     #     python-version: ${{ matrix.python-version }}
 
-    - name: Creating environnement...
+    - name: Update environnement...
       run: |
-        echo $(pwd)
-        cd ..
-        PARENT_DIR=$(pwd)
-        echo "WORKSPACE_PARENT_DIR=$PARENT_DIR" >> $GITHUB_ENV
-        echo "BUILD_DIR=$PARENT_DIR/build" >> $GITHUB_ENV
         sudo apt-get update
-        ${{ matrix.config.requirements }}
 
-    - name: Build
-      env:
-        CXX: ${{matrix.cxx-compilers}}
+    - name: Setup environnement...
       run: |
-        echo "Compilers:"
-        echo $CXX
-        echo ${{ env.WORKSPACE_PARENT_DIR }}
+        PARENT_DIR=$(pwd)/..
+        echo "WORKSPACE_PARENT_DIR=$PARENT_DIR" >> $GITHUB_ENV
+        echo "SRC_DIR=${PARENT_DIR}/TriBITS" >> $GITHUB_ENV
+        echo "BUILD_DIR=$PARENT_DIR/build" >> $GITHUB_ENV
+        ${{ matrix.config.requirements }}
+        ls ${{ env.WORKSPACE_PARENT_DIR }}/TriBITS
+
+    # - name: Build
+    #   env:
+    #     CXX: ${{matrix.cxx-compilers}}
+
+    #   run: |
+    #     echo "Compilers:"
+    #     echo $CXX
+    #     echo ${{ env.WORKSPACE_PARENT_DIR }}
+
+    #     mkdir ${{ env.BUILD_DIR }} 
+    #     cd ${{ env.BUILD_DIR }}
+    #     cmake \
+    #     -D TPL_ENABLE_MPI=OFF \
+    #     -D CMAKE_C_COMPILER=$CC \
+    #     -D TriBITS_ENABLE_Fortran=ON \
+    #     -D TriBITS_ENABLE_TESTS=ON \
+    #     ${{ env.WORKSPACE_PARENT_DIR }}/TriBITS
