--- a/.github/workflows/ghactions.yml
+++ b/.github/workflows/ghactions.yml
@@ -13,13 +13,14 @@ on:
 jobs:
   build:
 
-    # runs-on: ubuntu-20.04
-
     strategy:
       matrix:
         os: [ubuntu-latest, ubuntu-20.04]
         python-version: [3.7]
         cxx-compilers: [g++-9]
+
+    # runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v1
