--- a/.github/workflows/ghactions.yml
+++ b/.github/workflows/ghactions.yml
@@ -36,8 +36,8 @@ jobs:
 
     - name: Setup env vars...
       run: |
-        echo "SRC_DIR=${pwd}/TriBITS" >> $GITHUB_ENV
-        echo "BUILD_DIR=${pwd)build" >> $GITHUB_ENV
+        echo "SRC_DIR=$(pwd)/TriBITS" >> $GITHUB_ENV
+        echo "BUILD_DIR=$(pwd)build" >> $GITHUB_ENV
         ${{ matrix.config.requirements }}
 
     - name: Build
