--- a/.github/workflows/ghactions.yml
+++ b/.github/workflows/ghactions.yml
@@ -21,10 +21,9 @@ jobs:
 
     strategy:
       matrix:
-        cfg:
+        config:
         - { name: ubuntu_gnu8, os: ubuntu-latest, name: GNU, cc: gcc-8, cxx: g++-8, fc: gfortran-8}
         - { name: ubuntu_gnu9, os: ubuntu-latest, name: GNU, cc: gcc-9, cxx: g++-9, fc: gfortran-9}
-
 
     # runs-on: ubuntu-20.04
     runs-on: ${{ matrix.os }}
