--- a/.github/workflows/ghactions.yml
+++ b/.github/workflows/ghactions.yml
@@ -22,8 +22,8 @@ jobs:
     strategy:
       matrix:
         config:
-        - { name: ubuntu_gnu8, os: ubuntu-latest, name: GNU, cc: gcc-8, cxx: g++-8, fc: gfortran-8}
-        - { name: ubuntu_gnu9, os: ubuntu-latest, name: GNU, cc: gcc-9, cxx: g++-9, fc: gfortran-9}
+        - { name: ubuntu_gnu8, os: ubuntu-latest, cc: gcc-8, cxx: g++-8, fc: gfortran-8}
+        - { name: ubuntu_gnu9, os: ubuntu-latest, cc: gcc-9, cxx: g++-9, fc: gfortran-9}
 
     # runs-on: ubuntu-20.04
     runs-on: ${{ matrix.os }}
