--- a/.github/workflows/ghactions.yml
+++ b/.github/workflows/ghactions.yml
@@ -22,9 +22,9 @@ jobs:
     strategy:
       matrix:
         config:
-        - { name: ubuntu_gnu9, os: ubuntu-latest, cc: gcc-9, cxx: g++-9, fc: gfortran-9}
+        - { name: ubuntu_gnu9,  os: ubuntu-latest, cc: gcc-9,  cxx: g++-9,  fc: gfortran-9}
+        - { name: ubuntu_gnu10, os: ubuntu-latest, cc: gcc-10, cxx: g++-10, fc: gfortran-10}
 
-    # runs-on: ubuntu-20.04
     runs-on: ${{ matrix.config.os }}
 
     steps:
@@ -56,11 +56,11 @@ jobs:
         echo "Compilers:"
         $CC --version
 
-      #   mkdir ${{ env.BUILD_DIR }} 
-      #   cd ${{ env.BUILD_DIR }}
-      #   cmake \
-      #   -D TPL_ENABLE_MPI=OFF \
-      #   -D CMAKE_C_COMPILER=gcc \
-      #   -D TriBITS_ENABLE_Fortran=ON \
-      #   -D TriBITS_ENABLE_TESTS=ON \
-      #   ${{ env.SRC_DIR }}
+        mkdir ${{ env.BUILD_DIR }} 
+        cd ${{ env.BUILD_DIR }}
+        cmake \
+         -D TPL_ENABLE_MPI=OFF \
+         -D CMAKE_C_COMPILER=gcc \
+         -D TriBITS_ENABLE_Fortran=ON \
+         -D TriBITS_ENABLE_TESTS=ON \
+         ${{ env.SRC_DIR }}
