--- a/.github/workflows/ghactions.yml
+++ b/.github/workflows/ghactions.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       matrix:
         config:
-        - { name: ubuntu_gnu9,  os: ubuntu-latest, cc: gcc-9,  cxx: g++-9,  fc: gfortran-9,  py: "3.8"}
-        - { name: ubuntu_gnu10, os: ubuntu-latest, cc: gcc-10, cxx: g++-10, fc: gfortran-10, py: "3.8"}
+        - { os: ubuntu-latest, cc: gcc-9,  cxx: g++-9,  fc: gfortran-9,  python: "3.8"}
+        - { os: ubuntu-latest, cc: gcc-10, cxx: g++-10, fc: gfortran-10, python: "3.8"}
 
     runs-on: ${{ matrix.config.os }}
 
