--- a/.github/workflows/ghactions.yml
+++ b/.github/workflows/ghactions.yml
@@ -1,5 +1,5 @@
 
-name: Draft Action for TriBITS
+name: Draft Action
 
 # Controls when the action will run. 
 # Triggers the workflow on push or pull request
