--- a/.github/workflows/ghactions.yml
+++ b/.github/workflows/ghactions.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python }}
+        python-version: ${{ matrix.config.python }}
 
     - name: get-cmake
       uses: lukka/get-cmake@v3.20.1
